# aml23-ego

./: .gitignore  README.md  aggregation.py  colab_runner.ipynb  pyproject.toml  save_feat.py  train_classifier.py  transformer_classifier.py
configs/: I3D_save_feat.yaml  default.yaml
models/: FinalClassifier.py  I3D.py  TemporalModel.py  __init__.py  transformer.md
tasks/: action_recognition_task.py
utils/: extract_pkl.py  loaders.py  temporal_aggregation.md  temporal_aggregation.py
